--- a/source/jade/_sidebar.jade
+++ b/source/jade/_sidebar.jade
@@ -1,6 +1,6 @@
 .sidebar
 	.logo
-		a(href="#") 
+		a(href="main.html") 
 	.menu
 		ul
 			li.home
@@ -12,7 +12,7 @@
 			li.talks
 				a(href="#", data-menu="home") Обсуждения
 			li.search
-				a(href="#", data-menu="home") Поиск
+				a(href="docs.html") Поиск
 	.side-extend-fix
 	.side-extend(data-menu="home")
 		.bname
@@ -33,297 +33,294 @@
 				.bcat.open.active
 					.bcat-name
 						.name 
-							a(href="#") Потребности 
+							a(href="docs.html") Потребности 
 							span (4)
 						.toogle -
 					.bcat-con
 						.item
-							.iprev
-								a(href="#") 
-								img(src="img/content/60-45-1.jpg", alt="")
 							.iname
-								a(href="#") Текстильный импортозамещающий комплекс появится в Ростовской…
+								a(href="docs.html") Текстильный импортозамещающий комплекс появится в Ростовской…
 						.item
 							.iprev
-								a(href="#") 
-								img(src="img/content/60-45-2.jpg", alt="")
+								a(href="docs.html") 
+									img(src="img/content/60-45-2.jpg", alt="")
 							.iname
-								a(href="#") Денис Мантуров принял участие в совещании Дмитрия Медведева… развитию микроэлектроники
+								a(href="docs.html") Денис Мантуров принял участие в совещании Дмитрия Медведева… развитию микроэлектроники
 						.item
 							.iprev
-								a(href="#")  
-								img(src="img/content/60-45-3.jpg", alt="")
+								a(href="docs.html")  
+									img(src="img/content/60-45-3.jpg", alt="")
 							.iname
-								a(href="#") Ростех и «Генфа» будут производить импортозамещающие…
+								a(href="docs.html") Ростех и «Генфа» будут производить импортозамещающие…
 				.bcat
 					.bcat-name
 						.name 
-							a(href="#") Услуги 
+							a(href="docs.html") Услуги 
 							span (12)
 						.toogle +
 					.bcat-con
 						.item
 							.iprev
-								a(href="#") 
-								img(src="img/content/60-45-2.jpg", alt="")
+								a(href="docs.html") 
+									img(src="img/content/60-45-2.jpg", alt="")
 							.iname
-								a(href="#") Текстильный импортозамещающий комплекс появится в Ростовской…
+								a(href="docs.html") Текстильный импортозамещающий комплекс появится в Ростовской…
 						.item
 							.iprev
-								a(href="#") 
-								img(src="img/content/60-45-3.jpg", alt="")
+								a(href="docs.html") 
+									img(src="img/content/60-45-3.jpg", alt="")
 							.iname
-								a(href="#") Денис Мантуров принял участие в совещании Дмитрия Медведева… развитию микроэлектроники
+								a(href="docs.html") Денис Мантуров принял участие в совещании Дмитрия Медведева… развитию микроэлектроники
 						.item
 							.iprev
-								a(href="#") 
-								img(src="img/content/60-45-2.jpg", alt="")
+								a(href="docs.html") 
+									img(src="img/content/60-45-2.jpg", alt="")
 							.iname
-								a(href="#") Текстильный импортозамещающий комплекс появится в Ростовской…
+								a(href="docs.html") Текстильный импортозамещающий комплекс появится в Ростовской…
 						.item
 							.iprev
-								a(href="#") 
-								img(src="img/content/60-45-3.jpg", alt="")
+								a(href="docs.html") 
+									img(src="img/content/60-45-3.jpg", alt="")
 							.iname
-								a(href="#") Денис Мантуров принял участие в совещании Дмитрия Медведева… развитию микроэлектроники
+								a(href="docs.html") Денис Мантуров принял участие в совещании Дмитрия Медведева… развитию микроэлектроники
 						.item
 							.iprev
-								a(href="#") 
-								img(src="img/content/60-45-1.jpg", alt="")
+								a(href="docs.html") 
+									img(src="img/content/60-45-1.jpg", alt="")
 							.iname
-								a(href="#") Ростех и «Генфа» будут производить импортозамещающие…
+								a(href="docs.html") Ростех и «Генфа» будут производить импортозамещающие…
 				.bcat
 					.bcat-name
 						.name 
-							a(href="#") Потребности 
+							a(href="docs.html") Потребности 
 							span (4)
 						.toogle +
 					.bcat-con
 						.item
 							.iprev
-								a(href="#") 
-								img(src="img/content/60-45-2.jpg", alt="")
+								a(href="docs.html") 
+									img(src="img/content/60-45-2.jpg", alt="")
 							.iname
-								a(href="#") Текстильный импортозамещающий комплекс появится в Ростовской…
+								a(href="docs.html") Текстильный импортозамещающий комплекс появится в Ростовской…
 						.item
 							.iprev
-								a(href="#") 
-								img(src="img/content/60-45-3.jpg", alt="")
+								a(href="docs.html") 
+									img(src="img/content/60-45-3.jpg", alt="")
 							.iname
-								a(href="#") Денис Мантуров принял участие в совещании Дмитрия Медведева… развитию микроэлектроники
+								a(href="docs.html") Денис Мантуров принял участие в совещании Дмитрия Медведева… развитию микроэлектроники
 						.item
 							.iprev
-								a(href="#") 
-								img(src="img/content/60-45-1.jpg", alt="")
+								a(href="docs.html") 
+									img(src="img/content/60-45-1.jpg", alt="")
 							.iname
-								a(href="#") Ростех и «Генфа» будут производить импортозамещающие…
+								a(href="docs.html") Ростех и «Генфа» будут производить импортозамещающие…
 				.bcat
 					.bcat-name
 						.name 
-							a(href="#") Потребности 
+							a(href="docs.html") Потребности 
 							span (4)
 						.toogle +
 					.bcat-con
 						.item
 							.iprev
-								a(href="#") 
-								img(src="img/content/60-45-2.jpg", alt="")
+								a(href="docs.html") 
+									img(src="img/content/60-45-2.jpg", alt="")
 							.iname
-								a(href="#") Текстильный импортозамещающий комплекс появится в Ростовской…
+								a(href="docs.html") Текстильный импортозамещающий комплекс появится в Ростовской…
 						.item
 							.iprev
-								a(href="#") 
-								img(src="img/content/60-45-3.jpg", alt="")
+								a(href="docs.html") 
+									img(src="img/content/60-45-3.jpg", alt="")
 							.iname
-								a(href="#") Денис Мантуров принял участие в совещании Дмитрия Медведева… развитию микроэлектроники
+								a(href="docs.html") Денис Мантуров принял участие в совещании Дмитрия Медведева… развитию микроэлектроники
 						.item
 							.iprev
-								a(href="#") 
-								img(src="img/content/60-45-1.jpg", alt="")
+								a(href="docs.html") 
+									img(src="img/content/60-45-1.jpg", alt="")
 							.iname
-								a(href="#") Ростех и «Генфа» будут производить импортозамещающие…
+								a(href="docs.html") Ростех и «Генфа» будут производить импортозамещающие…
 				.bcat
 					.bcat-name
 						.name 
-							a(href="#") Потребности 
+							a(href="docs.html") Потребности 
 							span (4)
 						.toogle +
 					.bcat-con
 						.item
 							.iprev
-								a(href="#") 
-								img(src="img/content/60-45-2.jpg", alt="")
+								a(href="docs.html") 
+									img(src="img/content/60-45-2.jpg", alt="")
 							.iname
-								a(href="#") Текстильный импортозамещающий комплекс появится в Ростовской…
+								a(href="docs.html") Текстильный импортозамещающий комплекс появится в Ростовской…
 						.item
 							.iprev
-								a(href="#") 
-								img(src="img/content/60-45-3.jpg", alt="")
+								a(href="docs.html") 
+									img(src="img/content/60-45-3.jpg", alt="")
 							.iname
-								a(href="#") Денис Мантуров принял участие в совещании Дмитрия Медведева… развитию микроэлектроники
+								a(href="docs.html") Денис Мантуров принял участие в совещании Дмитрия Медведева… развитию микроэлектроники
 						.item
 							.iprev
-								a(href="#") 
-								img(src="img/content/60-45-1.jpg", alt="")
+								a(href="docs.html") 
+									img(src="img/content/60-45-1.jpg", alt="")
 							.iname
-								a(href="#") Ростех и «Генфа» будут производить импортозамещающие…
+								a(href="docs.html") Ростех и «Генфа» будут производить импортозамещающие…
 	.side-extend(data-menu="info")
 		.bname
 			h3 Информация
-			a(href="#").close.hoverbg
+			a(href="docs.html").close.hoverbg
 				.icon
 					.act
 		//-.bnav
 			ul
 				li
-					a(href="#") За неделю
+					a(href="docs.html") За неделю
 				li.active
-					a(href="#") За месяц
+					a(href="docs.html") За месяц
 				li
-					a(href="#") За все время
+					a(href="docs.html") За все время
 		.bcon
 			.scroller-box
 				.bcat.open.active
 					.bcat-name
 						.name 
-							a(href="#") Услуги 
+							a(href="docs.html") Услуги 
 							span (12)
 						.toogle -
 					.bcat-con
 						.item
 							.iprev
-								a(href="#") 
-								img(src="img/content/60-45-2.jpg", alt="")
+								a(href="docs.html") 
+									img(src="img/content/60-45-2.jpg", alt="")
 							.iname
-								a(href="#") Текстильный импортозамещающий комплекс появится в Ростовской…
+								a(href="docs.html") Текстильный импортозамещающий комплекс появится в Ростовской…
 						.item
 							.iprev
-								a(href="#") 
-								img(src="img/content/60-45-3.jpg", alt="")
+								a(href="docs.html") 
+									img(src="img/content/60-45-3.jpg", alt="")
 							.iname
-								a(href="#") Денис Мантуров принял участие в совещании Дмитрия Медведева… развитию микроэлектроники
+								a(href="docs.html") Денис Мантуров принял участие в совещании Дмитрия Медведева… развитию микроэлектроники
 						.item
 							.iprev
-								a(href="#") 
-								img(src="img/content/60-45-2.jpg", alt="")
+								a(href="docs.html") 
+									img(src="img/content/60-45-2.jpg", alt="")
 							.iname
-								a(href="#") Текстильный импортозамещающий комплекс появится в Ростовской…
+								a(href="docs.html") Текстильный импортозамещающий комплекс появится в Ростовской…
 						.item
 							.iprev
-								a(href="#") 
-								img(src="img/content/60-45-3.jpg", alt="")
+								a(href="docs.html") 
+									img(src="img/content/60-45-3.jpg", alt="")
 							.iname
-								a(href="#") Денис Мантуров принял участие в совещании Дмитрия Медведева… развитию микроэлектроники
+								a(href="docs.html") Денис Мантуров принял участие в совещании Дмитрия Медведева… развитию микроэлектроники
 						.item
 							.iprev
-								a(href="#") 
-								img(src="img/content/60-45-1.jpg", alt="")
+								a(href="docs.html") 
+									img(src="img/content/60-45-1.jpg", alt="")
 							.iname
-								a(href="#") Ростех и «Генфа» будут производить импортозамещающие…
+								a(href="docs.html") Ростех и «Генфа» будут производить импортозамещающие…
 				.bcat.open.active
 					.bcat-name
 						.name 
-							a(href="#") Потребности 
+							a(href="docs.html") Потребности 
 							span (4)
 						.toogle -
 					.bcat-con
 						.item
 							.iprev
-								a(href="#") 
-								img(src="img/content/60-45-2.jpg", alt="")
+								a(href="docs.html") 
+									img(src="img/content/60-45-2.jpg", alt="")
 							.iname
-								a(href="#") Текстильный импортозамещающий комплекс появится в Ростовской…
+								a(href="docs.html") Текстильный импортозамещающий комплекс появится в Ростовской…
 						.item
 							.iprev
-								a(href="#") 
-								img(src="img/content/60-45-3.jpg", alt="")
+								a(href="docs.html") 
+									img(src="img/content/60-45-3.jpg", alt="")
 							.iname
-								a(href="#") Денис Мантуров принял участие в совещании Дмитрия Медведева… развитию микроэлектроники
+								a(href="docs.html") Денис Мантуров принял участие в совещании Дмитрия Медведева… развитию микроэлектроники
 						.item
 							.iprev
-								a(href="#") 
-								img(src="img/content/60-45-1.jpg", alt="")
+								a(href="docs.html") 
+									img(src="img/content/60-45-1.jpg", alt="")
 							.iname
-								a(href="#") Ростех и «Генфа» будут производить импортозамещающие…
+								a(href="docs.html") Ростех и «Генфа» будут производить импортозамещающие…
 				.bcat
 					.bcat-name
 						.name 
-							a(href="#") Потребности 
+							a(href="docs.html") Потребности 
 							span (4)
 						.toogle +
 					.bcat-con
 						.item
 							.iprev
-								a(href="#") 
-								img(src="img/content/60-45-2.jpg", alt="")
+								a(href="docs.html") 
+									img(src="img/content/60-45-2.jpg", alt="")
 							.iname
-								a(href="#") Текстильный импортозамещающий комплекс появится в Ростовской…
+								a(href="docs.html") Текстильный импортозамещающий комплекс появится в Ростовской…
 						.item
 							.iprev
-								a(href="#") 
-								img(src="img/content/60-45-3.jpg", alt="")
+								a(href="docs.html") 
+									img(src="img/content/60-45-3.jpg", alt="")
 							.iname
-								a(href="#") Денис Мантуров принял участие в совещании Дмитрия Медведева… развитию микроэлектроники
+								a(href="docs.html") Денис Мантуров принял участие в совещании Дмитрия Медведева… развитию микроэлектроники
 						.item
 							.iprev
-								a(href="#") 
-								img(src="img/content/60-45-1.jpg", alt="")
+								a(href="docs.html") 
+									img(src="img/content/60-45-1.jpg", alt="")
 							.iname
-								a(href="#") Ростех и «Генфа» будут производить импортозамещающие…
+								a(href="docs.html") Ростех и «Генфа» будут производить импортозамещающие…
 				.bcat
 					.bcat-name
 						.name 
-							a(href="#") Потребности 
+							a(href="docs.html") Потребности 
 							span (4)
 						.toogle +
 					.bcat-con
 						.item
 							.iprev
-								a(href="#") 
-								img(src="img/content/60-45-2.jpg", alt="")
+								a(href="docs.html") 
+									img(src="img/content/60-45-2.jpg", alt="")
 							.iname
-								a(href="#") Текстильный импортозамещающий комплекс появится в Ростовской…
+								a(href="docs.html") Текстильный импортозамещающий комплекс появится в Ростовской…
 						.item
 							.iprev
-								a(href="#") 
-								img(src="img/content/60-45-3.jpg", alt="")
+								a(href="docs.html") 
+									img(src="img/content/60-45-3.jpg", alt="")
 							.iname
-								a(href="#") Денис Мантуров принял участие в совещании Дмитрия Медведева… развитию микроэлектроники
+								a(href="docs.html") Денис Мантуров принял участие в совещании Дмитрия Медведева… развитию микроэлектроники
 						.item
 							.iprev
-								a(href="#") 
-								img(src="img/content/60-45-1.jpg", alt="")
+								a(href="docs.html") 
+									img(src="img/content/60-45-1.jpg", alt="")
 							.iname
-								a(href="#") Ростех и «Генфа» будут производить импортозамещающие…
+								a(href="docs.html") Ростех и «Генфа» будут производить импортозамещающие…
 				.bcat.open.active
 					.bcat-name
 						.name 
-							a(href="#") Потребности 
+							a(href="docs.html") Потребности 
 							span (4)
 						.toogle -
 					.bcat-con
 						.item
 							.iprev
-								a(href="#") 
-								img(src="img/content/60-45-1.jpg", alt="")
+								a(href="docs.html") 
+									img(src="img/content/60-45-1.jpg", alt="")
 							.iname
-								a(href="#") Текстильный импортозамещающий комплекс появится в Ростовской…
+								a(href="docs.html") Текстильный импортозамещающий комплекс появится в Ростовской…
 						.item
 							.iprev
-								a(href="#") 
-								img(src="img/content/60-45-2.jpg", alt="")
+								a(href="docs.html") 
+									img(src="img/content/60-45-2.jpg", alt="")
 							.iname
-								a(href="#") Денис Мантуров принял участие в совещании Дмитрия Медведева… развитию микроэлектроники
+								a(href="docs.html") Денис Мантуров принял участие в совещании Дмитрия Медведева… развитию микроэлектроники
 						.item
 							.iprev
-								a(href="#")  
-								img(src="img/content/60-45-3.jpg", alt="")
+								a(href="docs.html")  
+									img(src="img/content/60-45-3.jpg", alt="")
 							.iname
-								a(href="#") Ростех и «Генфа» будут производить импортозамещающие…
+								a(href="docs.html") Ростех и «Генфа» будут производить импортозамещающие…
 	.side-extend(data-menu="events")
 		.bname
 			h3 События
-			a(href="#").close.hoverbg
+			a(href="docs.html").close.hoverbg
 				.icon
 					.act
 		//-.bnav
@@ -332,7 +329,7 @@
 				.bcat.open.active
 					.bcat-name
 						.name 
-							a(href="#") Сегодня 
+							a(href="docs.html") Сегодня 
 							span (2)
 						.toogle -
 					.bcat-con
@@ -341,17 +338,17 @@
 								.num 17
 								.day октября
 							.iname
-								a(href="#") Выставка научного оборудования НИИ спорта РГУФКСМиТ
+								a(href="docs.html") Выставка научного оборудования НИИ спорта РГУФКСМиТ
 						.item
 							.idate
 								.num 14
 								.day октября
 							.iname
-								a(href="#") Инновации в торговле
+								a(href="docs.html") Инновации в торговле
 				.bcat
 					.bcat-name
 						.name 
-							a(href="#") Ближайшие 
+							a(href="docs.html") Ближайшие 
 							span (2)
 						.toogle -
 					.bcat-con
@@ -360,17 +357,17 @@
 								.num 17
 								.day октября
 							.iname
-								a(href="#") Выставка научного оборудования НИИ спорта РГУФКСМиТ
+								a(href="docs.html") Выставка научного оборудования НИИ спорта РГУФКСМиТ
 						.item
 							.idate
 								.num 14
 								.day октября
 							.iname
-								a(href="#") Инновации в торговле
+								a(href="docs.html") Инновации в торговле
 				.bcat
 					.bcat-name
 						.name 
-							a(href="#") Прошедшие 
+							a(href="docs.html") Прошедшие 
 							span (2)
 						.toogle -
 					.bcat-con
@@ -379,10 +376,10 @@
 								.num 17
 								.day октября
 							.iname
-								a(href="#") Выставка научного оборудования НИИ спорта РГУФКСМиТ
+								a(href="docs.html") Выставка научного оборудования НИИ спорта РГУФКСМиТ
 						.item
 							.idate
 								.num 14
 								.day октября
 							.iname
-								a(href="#") Инновации в торговле
+								a(href="docs.html") Инновации в торговле
