--- a/source/styl/style.styl
+++ b/source/styl/style.styl
@@ -263,8 +263,9 @@ color-orange()
 					border-bottom 1px solid #2e3033;
 					.iprev, .idate
 						display table-cell;
-						vertical-align middle; 
-					.idate
+						vertical-align middle;
+						padding-right 30px 
+					.idate 
 						padding-left 20px
 						color #F85800
 						font-size 10px
@@ -274,9 +275,9 @@ color-orange()
 							font-size 24px
 					.iname
 						display table-cell;
-						padding-left 30px; 
 						vertical-align middle;
 						a
+							display block
 							color #e5e5e5; tdn();
 							&:hover
 								color #ff8c4d;
