Добавление окошка раздел в разработке

--- a/source/jade/_layout.jade
+++ b/source/jade/_layout.jade
@@ -45,7 +45,7 @@ body
 					.menu
 						ul
 							li
-								a(href="#") Программы по развитию
+								a(href="#").js-open-coming-soon Программы по развитию
 							li
 								a(href="#") Отчеты
 							li
