--- a/source/jade/main.jade
+++ b/source/jade/main.jade
@@ -21,7 +21,7 @@ block append content
 		.pathway
 			ul
 				li
-					a(href="#") Рынок услуг в
+					a(href="#") Рынок услуг
 		//------------------------------------------------
 		.slider-index-wrap
 			ul.slider-index
