--- a/source/jade/_head.jade
+++ b/source/jade/_head.jade
@@ -18,11 +18,13 @@ html
 		link(href="fonts/fonts.css", rel="stylesheet")
 		link(href="css/normalize.css", rel="stylesheet")
 		link(href="css/style.css", rel="stylesheet")
+		link(href="css/sweet-alert.css", rel="stylesheet")
 		block styles
 
 		// Scripts
 		//-script(src="js/jquery.remodal.js", type="text/javascript")
 		script(src="js/jquery.min.js", type="text/javascript")
 		script(src="js/jquery.mCustomScrollbar.concat.min.js", type="text/javascript")
+		script(src="js/sweet-alert.min.js", type="text/javascript")
 		block scripts
 		script(src="js/functions.js", type="text/javascript")
