--- a/source/jade/main.jade
+++ b/source/jade/main.jade
@@ -27,12 +27,13 @@ block append content
 			ul.slider-index
 				li 
 					img(src="img/content/slider-1.jpg", alt="")
-					.desc Информационный портал, содействующий <br>развитию инжиниринговой деятельности<br>и промышленного дизайна
+					.desc Информационный портал, содействующий развитию инжиниринговой деятельности<br>и промышленного дизайна
 				li 
 					img(src="img/content/slider-2.jpg", alt="")
-					.desc Информационный портал, содействующий <br>развитию инжиниринговой деятельности <br>и промышленного дизайна
+					.desc Наиболее полная информация <br>о рынке инжиниринговых услуг
 				li
 					img(src="img/content/slider-3.jpg", alt="")
+					.desc Экспертное сообщество профессионалов <br>в сфере инжиниринга и промдизайна
 		//------------------------------------------------
 		.main-left
 			.box-info
