--- a/source/styl/common.styl
+++ b/source/styl/common.styl
@@ -11,7 +11,10 @@ html, body
 	position relative; min-height: 100%; 
 *
 	margin 0; padding 0; border 0; outline 0;
-
+hr 
+	width 428px
+	height 1px
+	background #e6e6e6
 
 
 //	ПОЛЕЗНОСТИ
@@ -118,7 +121,10 @@ ol.float, ul.float
 		float left; width 50%; margin-left 0; full();
 ul.mrno
 	margin 0;
-
+ol.inline, ul.inline
+	clearfix()
+	li 
+		float left; margin-left 0; full();
 
 
 //	ССЫЛКИ
