--- a/source/styl/style.styl
+++ b/source/styl/style.styl
@@ -2518,3 +2518,54 @@ footer
 		&.lh-small
 			p
 				line-height 16px
+// list for about.html
+.tasks
+	mainfont()
+	color #333
+	font-size 16px
+	font-weight 400
+	h3 
+		font-size 30px
+		font-weight 900
+		margin-top 30px 
+		margin-bottom 20px  
+	li
+		margin-left 0
+		margin-bottom 20px 
+		line-height 1.5
+.made-by
+	p
+		margin-top 67px 
+		margin-bottom 25px 
+	b
+		color #333
+		font-size 16px
+		mediumfont()
+		font-weight 700
+	li 
+		list-style none
+		margin 2px 0 0 0
+		a
+			color #333
+			font-size 16px
+			font-weight 400
+			text-decoration underline
+	ul.inline
+		margin-top 35px 
+		li
+			margin-right 45px
+.contact-info 
+	margin-bottom 300px 
+	hr
+		margin-top 55px 
+	p
+		font-size 12px
+		font-weight 400
+		color #999
+		margin 6px 0
+	ul
+		li
+			color #333
+			font-size 12px
+			list-style none
+			margin-bottom 2px 
