--- a/source/jade/about.jade
+++ b/source/jade/about.jade
@@ -6,6 +6,10 @@ extends _layout
 block title
 	| - About
 	
+block styles
+	link(href="css/jquery.remodal.css", rel="stylesheet")
+block scripts
+	script(src="js/jquery.remodal.js", type="text/javascript")
 block scripts
 	script(src="js/jquery.supercal.js", type="text/javascript")
  
@@ -13,11 +17,15 @@ block scripts
 //- Контент
 //------------------------------------------------
 block append content
+	.hide
+		include _popup-login
+		include _popup-register
+	//------------------------------------------------
 	.main-width.main-wrap
 		.pathway
 			ul
 				li
-					a(href="#") О проекте
+					a(href="#login-popup") О проекте
 		//------------------------------------------------
 		.page-name
 			h1 Добро пожаловать
