changed all login popups to newest one

--- a/source/jade/_popup-login.jade
+++ b/source/jade/_popup-login.jade
@@ -1,4 +1,4 @@
-.remodal(data-remodal-id="login-popup").login-popup.enter-site
+.remodal(data-remodal-id="enter-popup").login-popup.enter-site
 	h1 Вход на сайт
 	.social
 		ul.inline
