--- a/source/jade/_popup-register.jade
+++ b/source/jade/_popup-register.jade
@@ -36,4 +36,4 @@
 				br
 				a(href="#") (пользовательское соглашение)
 	.call-to-register Уже регистрировались? 
-		a(href="#login-popup") Вход
+		a(href="#enter-popup") Вход
