--- a/source/jade/about.jade
+++ b/source/jade/about.jade
@@ -25,7 +25,7 @@ block append content
 		.pathway
 			ul
 				li
-					a(href="#login-popup") О проекте
+					a(href="#") О проекте
 		//------------------------------------------------
 		.page-name
 			h1 Добро пожаловать
