--- a/source/jade/requirements-comment.jade
+++ b/source/jade/requirements-comment.jade
@@ -18,23 +18,8 @@ block scripts
 //------------------------------------------------
 block append content
 	.hide
-		.remodal(data-remodal-id="enter-popup")
-			.ins.login-popup
-				span Авторизуйтесь
-				.social
-					ul
-						li.vk
-							a(href="#")
-						li.fb
-							a(href="#")
-						li.tw
-							a(href="#")
-						li.od
-							a(href="#")
-						li.you
-							a(href="#")
-						li.rss
-							a(href="#") 
+		include _popup-login
+		include _popup-register
 	.main-width.main-wrap
 		.pathway
 			ul
