updated login popup

--- a/source/jade/_popup-login.jade
+++ b/source/jade/_popup-login.jade
@@ -20,10 +20,10 @@
 		form
 			.formgroup
 				label(for="login__email") Эл. почта
-				input(type="password" class="float-right" id="login__email" autofocus)
+				input.float-right(type="password" id="login__email" autofocus)
 			.formgroup
 				label(for="login__password") Пароль
-				input(type="password" class="float-right" id="login__password")
+				input.float-right(type="password" id="login__password")
 			.formgroup
 				input(type="checkbox" id="login__short-session")
 				label(for="login__short-session") Чужой компьютер
