Проверка конфликта с js-open-coming-soon

--- a/source/jade/equipments-item.jade
+++ b/source/jade/equipments-item.jade
@@ -41,10 +41,10 @@ block append content
 									li.star
 									li
 							.tags
-								a(href="#").tags-item
+								a(href="#").tags-item.js-open-coming-soon
 									span.name Машиностроение
 									span.count.empty
-								a(href="#").tags-item
+								a(href="#").tags-item.js-open-coming-soon
 									span.name Металлообработка
 									span.count 388
 						.iprev
@@ -68,7 +68,7 @@ block append content
 						strong Организация (ВУЗ / ГНЦ): 
 						| Национальный исследовательский Томский политехнический университет
 				.order-service-cont
-					a(href="#").btn-orange.inline Заказать
+					a(href="#").btn-orange.inline.js-open-coming-soon Заказать
 					a(href="#").btn-grey-dashed.js-show-contacts Показать контакты
 					.contacts.js-contacts-box
 						span.phone +7 495 675 87 98
@@ -114,7 +114,7 @@ block append content
 											strong.reg-black Организация (ВУЗ / ГНЦ): 
 											| ООО «Лаборатории АМФОРА»
 									.tags
-										a(href="#").tags-item
+										a(href="#").tags-item.js-open-coming-soon
 											span.name Выставки
 											span.count 12
 										a(href="#").tags-item
