--- a/source/jade/_popup-register.jade
+++ b/source/jade/_popup-register.jade
@@ -34,6 +34,8 @@
 				input(type="submit" value="зарегистрироваться")
 			.you-agree Нажимая на кнопку «Зарегистрироваться», вы подтверждаете свое согласия с условиями предоставления услуг 
 				br
-				a(href="#") (пользовательское соглашение)
+				| (
+				a(href="#") пользовательское соглашение
+				| )
 	.call-to-register Уже регистрировались? 
 		a(href="#enter-popup") Вход
