--- a/source/jade/analytics.jade
+++ b/source/jade/analytics.jade
@@ -11,6 +11,15 @@ block styles
 block scripts
 	script(src="js/smooth-scroll.js", type="text/javascript")
 	script(src="js/jquery.remodal.js", type="text/javascript")
+	script(type="text/javascript").
+		smoothScroll.init({
+			speed: 1000,
+			easing: 'easeInOutCubic',
+			offset: 69,
+			updateURL: true,
+			callbackBefore: function ( toggle, anchor ) {},
+			callbackAfter: function ( toggle, anchor ) {}
+		});
 
 
 //- Контент
