--- a/source/styl/style.styl
+++ b/source/styl/style.styl
@@ -2661,3 +2661,27 @@ footer
 			font-size 12px
 			list-style none
 			margin-bottom 2px 
+
+// edit-interface.jade
+
+.edit-interface
+	.add
+		display block
+		text-align center
+		height 80px
+		line-height 80px
+		color #333
+		font-family "Lato"
+		font-size 21px
+		latoblack()
+		text-transform uppercase
+		border 5px solid #ccc 
+		&:hover
+			border-color #999
+			text-decoration none
+		&:active
+			background #ccc
+	form 
+		margin-top 30px
+	.search-con 
+		width 40%
