edit-interface 70% done

--- a/source/styl/common.styl
+++ b/source/styl/common.styl
@@ -121,11 +121,14 @@ ol.float, ul.float
 		float left; width 50%; margin-left 0; full();
 ul.mrno
 	margin 0;
-ol.inline, ul.inline
+ol.inline, ul.inline, .inline
 	clearfix()
-	li 
+	> li, > * 
 		float left; margin-left 0; full();
 
+// .block
+// 	> *
+		// display block
 
 //	ССЫЛКИ
 // ===============================================
