--- a/source/styl/style.styl
+++ b/source/styl/style.styl
@@ -1,4 +1,5 @@
 @import "common.styl"
+@import "_summernote.styl"
 min-height = "screen and (min-height: 768px)"
 min-width = "screen and (max-width 1350px)"
 
@@ -1302,22 +1303,6 @@ h1.service-title
 	.legend
 		padding-bottom 15px;
 		color #999; font-size 11px; text-transform uppercase; 
-	.dates
-		padding-bottom 20px;
-		.line .td
-			display table-cell; padding 0 10px 20px 0;
-			color #333; font-size 14px;
-			vertical-align middle;
-			&:last-child
-				padding-right 0;
-		input
-			width 100%; full(); margin-bottom 0;
-		a.cal
-			display block; width 30px; height 32px;
-			background url("../img/icons/cal.jpg") no-repeat;
-			opacity .6; 
-			&:hover
-				opacity 1;
 	.checks
 		.line
 			padding-bottom 20px;
@@ -1325,6 +1310,22 @@ h1.service-title
 		padding 20px;
 		a
 			@extend .btn-orange;
+.dates
+	padding-bottom 20px;
+	.line .td
+		display table-cell; padding 0 10px 20px 0;
+		color #333; font-size 14px;
+		vertical-align middle;
+		&:last-child
+			padding-right 0;
+	input
+		width 100%; full(); margin-bottom 0;
+	a.cal
+		display block; width 30px; height 32px;
+		background url("../img/icons/cal.jpg") no-repeat;
+		opacity .6; 
+		&:hover
+			opacity 1;
 // -----------------------------------------------
 .box-simular-docs
 	.bcon
@@ -2672,6 +2673,8 @@ footer
 // edit-interface.jade
 
 .edit-interface
+	.inline
+		margin 0
 	.add
 		display block
 		text-align center
@@ -2688,7 +2691,202 @@ footer
 			text-decoration none
 		&:active
 			background #ccc
-	form 
+		margin-bottom 30px
+	.form-top 
+		width 100%
+		*
+			height 40px
+		.search-con 
+			width 40%
+			input
+				height 40px
+				padding-left 20px 
+		.dates
+			width 44.4444444% 
+			height 40px
+			line-height 40px
+			padding-bottom 0
+			span
+				color #333
+				font-size 14px
+				margin 0 20px
+			a.js-open-cal
+				margin 3px 0 5px 14px
+			input
+				width 22.5% 
+				line-height 1
+				box-shadow inset 0 0 5px rgba(204, 204, 204, 0.75)
+		input[type="submit"]
+			width 15.5555556%
+			float right
+			background #fff
+			color #333
+			latoblack()
+			font-size 12px
+			line-height 0.7
+			text-decoration none
+			text-transform uppercase
+			text-align center
+			border 3px solid #ff8c4d
+			&:hover
+				border-color #f85800
+			&:active
+				background #F85800 
+	.sort-articles
+		position relative
+		color #333
+		font-size 14px
+		line-height 1
 		margin-top 30px
-	.search-con 
-		width 40%
+		margin-bottom 24px
+		&:hover
+			cursor pointer
+		&:after
+			top: 49%;
+			left 200px
+			border: solid transparent;
+			content: " ";
+			height: 0;
+			width: 0;
+			mainfont()
+			position: absolute;
+			pointer-events: none;
+			border-top-color: #ff8c4d;
+			border-width: 5px;
+.articles
+	margin 0
+	li
+		list-style none
+		margin-left 0
+	> li
+		border 1px solid #e5e5e5
+		margin-bottom 20px!important
+	&__item
+		&:last-of-type
+			margin-bottom 0!important
+		width 100%
+		position relative
+		&-thumb
+			width 15.5555556%
+			height 98px
+			background-repeat no-repeat!important
+			background-size cover!important
+		&-info
+			width 62.2222222%
+			padding-left 3.2222222%
+		&-date-added
+			color #CCC
+			font-size 10px
+			line-height 18px
+			margin-top 10px
+		&-title
+			color #333
+			font-size 14px
+			// margin-top 5px
+			line-height 20px
+		&-stats
+			margin-top 5px
+			line-height 1
+		&-controls
+			width 22.2222222%
+			position absolute
+			top 0
+			bottom 0
+			right 0
+			margin 0
+			li
+				width 50%
+				height 100%
+				position relative
+				background-repeat no-repeat!important
+				background-position center!important
+				&:after
+					content ""
+					width 1px
+					height 69px
+					background #E5E5E5 
+					position absolute
+					right 0
+					top 0
+					bottom 0
+					margin auto
+				&:last-of-type:after
+					display none
+				&:hover
+					cursor pointer
+			background #FAFAFA
+			&-edit
+				background url(../img/icons/edit.png)
+				&:hover
+					background url(../img/icons/edit-h.png)
+			&-delete
+				background url(../img/icons/delete.png)
+				&:hover
+					background url(../img/icons/delete-h.png)
+	&__edit
+		padding 29px 40px 24px 20px 
+		label
+			color #333
+			font-size 14px
+			latoblack()
+			padding-left 18px 
+		textarea
+			full()
+			width 100%
+			border 1px solid #e5e5e5
+			margin-top 9px
+			margin-bottom 25px
+			resize horizontal
+			padding 11px 17px!important
+			color #333
+			font-size 14px
+		&-title
+			textarea
+				height 50px
+		&-text
+			margin-bottom 29px
+		&-images-list
+			display block
+			&-item
+				margin-left 19px!important
+				width 140px
+				height 100px
+				position relative
+				overflow hidden
+				&--edit
+					height 100px
+					width 40px
+					opacity 0.7
+					position absolute
+					top 0
+					left -40px
+					background url(../img/icons/circular-delete.png) no-repeat center, #000
+					&:hover
+						cursor pointer
+						background url(../img/icons/circular-delete-h.png) no-repeat center, #000
+					transition all 0.4s ease-in-out
+				&:hover &--edit
+					left 0
+				&--add
+					border 1px solid #e5e5e5
+					background #FAFAFA 
+					text-align center
+					height 100px
+					width 140px
+					margin-left 19px!important
+					&-icon
+						height 32px
+						width 32px
+						margin 17px auto 8px
+						background url(../img/icons/circular-add.png) no-repeat center
+					&-text
+						color #CCC
+						font-size 12px
+						width 80px
+						margin 0 auto
+					&:hover
+						cursor pointer
+					&:hover &-icon
+						background url(../img/icons/circular-add-h.png) no-repeat center
+					&:hover	&-text
+						color #999
